src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  height: 100vh;
}

.grad {
  height: calc(100vh - 3.5rem);
}

nav {
  transition: transform 0.6s ease;
  /* transform: translateX(-300px); */
}

.acrd-list {
  transition: all 0.6s ease;
}

.container-item {
  transition: margin 0.6s ease;
}


@layer base{
  .active {
    @apply -translate-x-96;
  }

  .closed {
   @apply opacity-0 py-0 h-0
  }

  .High{
    @apply border-violet-500 border-l-violet-500 text-indigo-700 
  }
  .Medium{
    @apply border-[#2C2B3C]/50 border-l-[#2C2B3C]/80 text-[#2C2B3C]
  }
  .Low{
    @apply border-[#246B36]/50 border-l-[#246B36]/80 text-[#246B36]

  }

}
@layer base {
  @media (min-width: 768px) {
    .active {
      @apply -translate-x-0;
    }
    .un {
      @apply -translate-x-96;
    }
  }
}

@media (min-width: 786px) {
  .mleft-32 {
    margin-left: -6rem !important;
  }
  /* .active{
    transform: translateX(-0.1rem);
  }
  .un{
  transform: translateX(-15rem);

  } */
}

/* width */
::-webkit-scrollbar {
  width: 4px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #f1f1f1cd;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: rgba(136, 136, 136, 0.535);
}

